--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "^4.1.3",
-    "@types/mocha": "^5.2.2",
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0",
-    "ts-node": "^6.1.1",
+    "@types/chai": "4.1.3",
+    "@types/mocha": "5.2.2",
+    "chai": "4.1.2",
+    "mocha": "5.2.0",
+    "ts-node": "6.1.1",
     "typescript": "2.9.1"
   },
   "dependencies": {
     "@types/mysql": "2.15.5",
+    "@types/node": "^10.3.3",
     "mysql": "2.15.0"
   }
 }
