--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "NODE_PATH=./src mocha --require ts-node/register 'tests/**/*.ts'",
+    "integration-tests": "NODE_PATH=./src mocha --exit --require ts-node/register 'tests/integration/**/*.ts'",
+    "test": "NODE_PATH=./src mocha --exit --require ts-node/register 'tests/**/*.ts'",
+    "unit-tests": "NODE_PATH=./src mocha --exit --require ts-node/register 'tests/unit/**/*.ts'",
     "watch": "tsc --watch"
   },
   "author": "",
@@ -15,12 +17,15 @@
     "@types/mocha": "5.2.2",
     "chai": "4.1.2",
     "mocha": "5.2.0",
+    "mock-require": "^3.0.2",
     "ts-node": "6.1.1",
     "typescript": "2.9.1"
   },
   "dependencies": {
+    "@types/md5": "2.1.32",
     "@types/mysql": "2.15.5",
-    "@types/node": "^10.3.3",
+    "@types/node": "10.3.3",
+    "md5": "2.2.1",
     "mysql": "2.15.0"
   }
 }
