--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^23.1.1",
-    "jest": "^23.1.0",
-    "ts-jest": "^22.4.6",
+    "@types/jest": "23.1.1",
+    "jest": "23.1.0",
+    "ts-jest": "22.4.6",
     "ts-node": "6.1.1",
     "typescript": "2.9.1"
   },
