--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "active-record",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
+  "types": "types.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "NODE_PATH=./src jest",
