--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
         "emitDecoratorMetadata": true,
         "esModuleInterop": true,
         "experimentalDecorators": true,
+        "lib": [
+            "es2016",
+            "es2017"
+        ],
         "module": "commonjs",
         "noImplicitAny": false,
         "outDir": "./dist/",
