--- a/package.json
+++ b/package.json
@@ -34,14 +34,12 @@
     "sqlstring": "2.3.1",
     "ts-jest": "^24.1.0",
     "ts-node": "8.4.1",
-    "typescript": "3.7.2"
+    "typescript": "<4.8"
   },
   "dependencies": {
     "@types/md5": "2.1.33",
     "@types/node": "12.12.6",
     "md5": "2.2.1",
-    "mysql": "npm:mysql2@^3.5.2",
     "mysql2": "^3.5.2"
   }
 }
-
